--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
+{% block style %}
+	{% include "block-style.html" %}
+{% endblock %}
+
+{% block header %}
+	{% include "block-header.html" %}
+{% endblock %}
+
+{% block sidebar %}
+	{% include "block-sidebar.html" %}
+{% endblock %}
+
 {% block content %}
 <h1>Contact Us</h1>
 <p>Below is an example of how a contact form might look with this template:</p>
